--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
     "otp-generator": "^4.0.1",
+    "router": "^1.3.8",
     "sendmail": "^1.6.1"
   }
 }
